ASSEMBLY_NAME = RotateButtonExample
ASSEMBLY_TYPE = winexe
ASSEMBLY_EXT = exe
SOURCE_FILES = \
	GLObjectRotationController.cs \
	ObjectRotationButton.cs \
	OldGLObjectBase.cs \
	OldTeapot.cs \
	RotateButtonExample.cs	

RESOURCE_FILES += \
	$(srcdir)/rotation-controller.glade

EXTRA_DIST += \
	rotation-controller.glade

include $(top_srcdir)/examples/glade/Include.am
include $(top_srcdir)/examples/util/Include.am
include $(top_srcdir)/examples/Include.am
