ASSEMBLY_NAME = TrackballExample
ASSEMBLY_TYPE = winexe
ASSEMBLY_EXT = exe
SOURCE_FILES = \
	TrackballExample.cs \
	TrackballWidget.cs \
	Trackball.cs

include $(top_srcdir)/examples/glade/Include.am
include $(top_srcdir)/examples/shapes/Include.am
include $(top_srcdir)/examples/util/Include.am
include $(top_srcdir)/examples/Include.am
