CLEANFILES = \
	Lesson01.exe \
	Lesson02.exe \
	Lesson03.exe \
	Lesson04.exe \
	Lesson05.exe \
	Lesson06.exe


all: \
	Lesson01.exe \
	Lesson02.exe \
	Lesson03.exe \
	Lesson04.exe \
	Lesson05.exe \
	Lesson06.exe


Lesson01.exe: Lesson01.cs
	mcs \
		-pkg:gtk-sharp-2.0 \
		-pkg:gtkgl-sharp-2.0 \
		-pkg:tao \
		Lesson01.cs \
		-out:Lesson01.exe

Lesson02.exe: Lesson02.cs
	mcs \
		-pkg:gtk-sharp-2.0 \
		-pkg:gtkgl-sharp-2.0 \
		-pkg:tao \
		Lesson02.cs \
		-out:Lesson02.exe

Lesson03.exe: Lesson03.cs
	mcs \
		-pkg:gtk-sharp-2.0 \
		-pkg:gtkgl-sharp-2.0 \
		-pkg:tao \
		Lesson03.cs \
		-out:Lesson03.exe

Lesson04.exe: Lesson04.cs
	mcs \
		-pkg:gtk-sharp-2.0 \
		-pkg:gtkgl-sharp-2.0 \
		-pkg:tao \
		Lesson04.cs \
		-out:Lesson04.exe

Lesson05.exe: Lesson05.cs
	mcs \
		-pkg:gtk-sharp-2.0 \
		-pkg:gtkgl-sharp-2.0 \
		-pkg:tao \
		Lesson05.cs \
		-out:Lesson05.exe

Lesson06.exe: Lesson06.cs
	mcs \
		-pkg:gtk-sharp-2.0 \
		-pkg:gtkgl-sharp-2.0 \
		-pkg:tao \
		Lesson06.cs \
		-out:Lesson06.exe


